--- a/Nine-Mens-Morris/public/static/css/style.css
+++ b/Nine-Mens-Morris/public/static/css/style.css
@@ -8,6 +8,7 @@
     --pink: #e0f;
     --yellow: #ff0;
 
+    --backgroundImage: url('../images/Dunes.jpg');
     --spaceBetweenButtons: 20px;
     --spaceEnd: 40px;
 }
@@ -20,7 +21,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-image: url('../images/Dunes.jpg');
+    background-image: var(--backgroundImage);
     background-repeat: no-repeat;
     background-size: cover;
 }
