--- a/Nine-Mens-Morris/public/static/css/configuration.css
+++ b/Nine-Mens-Morris/public/static/css/configuration.css
@@ -10,15 +10,15 @@
     border-radius: 15px;
     box-shadow: 0 8px 30px rgba(0, 0, 0, 0.15);
     width: 60%;
-    max-width: 600px; /* Define a largura máxima */
+    max-width: 600px;
     margin: 50px auto;
     color: #fff;
-    text-align: center; /* Centraliza o texto */
+    text-align: center;
 }
 
 .config-section h2 {
     font-size: 28px;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
     color: #fff;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
 }
@@ -32,21 +32,21 @@
 
 .config-form {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Duas colunas */
-    gap: 20px; /* Espaço entre os campos */
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
     margin-bottom: 20px;
 }
 
 .label-config {
     font-size: 16px;
     color: #f0f0f0;
-    margin-bottom: 5px;
-    text-align: left; /* Alinha o texto da label à esquerda */
+    margin-bottom: 10px;
+    text-align: center;
 }
 
 .select-group {
     display: flex;
-    flex-direction: column; /* As labels ficam em cima dos campos */
+    flex-direction: column;
 }
 
 .select-config {
@@ -67,7 +67,7 @@
 }
 
 .btn-config {
-    grid-column: span 2; /* O botão ocupa ambas as colunas */
+    grid-column: span 2;
     padding: 12px 20px;
     font-size: 16px;
     background-color: var(--configBtnColor);
@@ -79,7 +79,7 @@
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
     letter-spacing: 1px;
     text-transform: uppercase;
-    margin-top: 15px; /* Adicionar margem no topo do botão */
+    margin-top: 15px;
 }
 
 .btn-config:hover {
