--- a/Nine-Mens-Morris/public/static/css/configuration.css
+++ b/Nine-Mens-Morris/public/static/css/configuration.css
@@ -10,7 +10,7 @@
     border-radius: 15px;
     box-shadow: 0 8px 30px rgba(0, 0, 0, 0.15);
     width: 80%;
-    max-width: 600px;
+    max-width: 25%;
     margin: 50px auto;
     color: #fff;
     text-align: center;
