--- a/Nine-Mens-Morris/public/static/css/boardGame.css
+++ b/Nine-Mens-Morris/public/static/css/boardGame.css
@@ -1,5 +1,5 @@
 :root {
-    --boardSide: 500px;
+    --boardSide: 350px;
     --pointRadius: 14px;
     --pointColor: #e5e9f5;
     --pointBorderColor: #8499ce;
@@ -20,6 +20,39 @@
     justify-content: center;
     align-items: center;
     border-radius: 50%;
+}
+
+.game-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.game-phase {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#game-phase {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+.player-info {
+    width: 150px;
+    text-align: center;
+    padding: 20px;
+    margin-top: 10px;
+    font-weight: bold;
+    color: #101f44;
+    background-color: #f4f4f4;
+    border-radius: 10px;
+    border-color: #3B82F6;
+}
+
+.current-player {
+    background-color: yellow;
 }
 
 .point {
