--- a/Nine-Mens-Morris/public/static/css/boardGame.css
+++ b/Nine-Mens-Morris/public/static/css/boardGame.css
@@ -22,28 +22,35 @@
     border-radius: 50%;
 }
 
-.game-container {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
 .game-phase {
-    display: flex;
-    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    width: max-content;
+    text-align: center;
+    font-size: 20px;
+    padding: 10px;
+    margin: 0 auto;
+    border: #101f44;
+    border-style: solid;
+    border-width: calc(var(--lineThickness) / 1.5);
+    border-radius: 8px;
+    background-color: var(--pointBorderColor);
+    box-shadow: 0 0px 0px rgba(255, 0, 0, 0.7);
 }
 
-#game-phase {
-    text-align: center;
-    margin-bottom: 20px;
-  }
+.player-game-board {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    width: 80%;
+}
 
 .player-info {
-    width: 150px;
+    width: 150px; /* Defina uma largura fixa */
     text-align: center;
     padding: 20px;
-    margin-top: 10px;
+    margin-top: -25%;
     font-weight: bold;
     color: #101f44;
     background-color: #f4f4f4;
