--- a/Nine-Mens-Morris/public/static/css/authentication.css
+++ b/Nine-Mens-Morris/public/static/css/authentication.css
@@ -7,8 +7,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 60%;
-    height: 500px;
+    width: 70%;
+    height: 72%;
     background: var(--authenticationBackgroundImage)  no-repeat;
     background-size: cover;
     background-position: center;
