--- a/Nine-Mens-Morris/public/static/css/authentication.css
+++ b/Nine-Mens-Morris/public/static/css/authentication.css
@@ -171,6 +171,57 @@
     margin-right: 3px;
 }
 
+.remember-forgot input[type="checkbox"] {
+    appearance: none;
+    width: 16px;
+    height: 16px;
+    background-color: transparent;
+    border: 2px solid #e4e4e4;
+    border-radius: 4px;
+    position: relative;
+    cursor: pointer;
+    outline: none;
+    vertical-align: middle;
+    margin-right: 5px;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+}
+
+.remember-forgot input[type="checkbox"]:checked {
+    background-color: #6e82b7;
+    border-color: #6e82b7;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+}
+
+.remember-forgot input[type="checkbox"]:checked::after {
+    content: '✓';
+    font-size: 12px;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -15%) scale(0);
+    color: #fff;
+    animation: tickAnimation 0.3s ease forwards;
+}
+
+@keyframes tickAnimation {
+    0% {
+        transform: translate(-50%, -15%) scale(0);
+        opacity: 0;
+    }
+    50% {
+        transform: translate(-50%, -15%) scale(1.4);
+        opacity: 1;
+    }
+    100% {
+        transform: translate(-50%, -15%) scale(1);
+        opacity: 1;
+    }
+}
+
+.remember-forgot input[type="checkbox"]:hover {
+    border-color: #fff;
+}
+
 .remember-forgot a {
     color: #e4e4e4;
     text-decoration: none;
