--- a/Nine-Mens-Morris/public/static/css/authentication.css
+++ b/Nine-Mens-Morris/public/static/css/authentication.css
@@ -87,24 +87,13 @@
     color: #e4e4e4;
 }
 
-.logreg-box .form-box.login {
-    transform: translateX(0);
-    transition: transform .6s ease;
-    transition-delay: .7s;
-}
-
-.logreg-box.active .form-box.login {
-    transform: translateX(600px);
-    transition-delay: 0s;
-}
-
-.logreg-box .form-box.register {
+.logreg-box .form-box.login, .logreg-box .form-box.register, .logreg-box .form-box.account {
     transform: translateX(600px);
     transition: transform .6s ease;
     transition-delay: 0s;
 }
 
-.logreg-box.active .form-box.register {
+.logreg-box.login .form-box.login, .logreg-box.register .form-box.register, .logreg-box.account .form-box.account {
     transform: translateX(0);
     transition-delay: .7s;
 }
@@ -261,3 +250,34 @@
 .login-register p a:hover {
     text-decoration: underline;
 }
+  
+
+/* .account-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: rgba(255, 255, 255, 0.1);
+    padding: 20px;
+    border-radius: 10px;
+    color: #e4e4e4;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translateX(100%);
+    opacity: 0;
+    transition: transform 0.6s ease, opacity 0.6s ease;
+}
+
+
+.form-box {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    transition: transform 0.6s ease, opacity 0.6s ease;
+} */
