--- a/Nine-Mens-Morris/public/static/css/style.css
+++ b/Nine-Mens-Morris/public/static/css/style.css
@@ -1,16 +1,3 @@
-:root {
-    --white: #ffffff;
-    --backgroundColor: #1f242d;
-    --lightBlue: #0ef;
-    --lightGreen: #0f0;
-    --pink: #e0f;
-    --yellow: #ff0;
-
-    --backgroundImage: url('../images/Dunes.jpg');
-    --spaceBetweenButtons: 20px;
-    --spaceEnd: 40px;
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -110,7 +97,7 @@ main {
     display: none;
     opacity: 0;
     color: #e4e4e4e4;
-    transition: opacity 0.7s ease;
+    transition: opacity 0.5s ease, transform 0.5s ease;
 }
 
 .content.active {
