--- a/Nine-Mens-Morris/public/static/css/style.css
+++ b/Nine-Mens-Morris/public/static/css/style.css
@@ -9,6 +9,7 @@ body {
     background-image: var(--backgroundImage);
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 header {
@@ -97,7 +98,7 @@ main {
     display: none;
     opacity: 0;
     color: #e4e4e4e4;
-    transition: opacity 0.5s ease, transform 0.5s ease;
+    transition: opacity 0.3s ease;
 }
 
 .content.active {
