--- a/Nine-Mens-Morris/public/static/css/configuration.css
+++ b/Nine-Mens-Morris/public/static/css/configuration.css
@@ -1,14 +1,21 @@
 .config-section {
-    padding: 20px;
-    background: rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(10px);
-    border-radius: 15px;
-    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.15);
-    width: 80%;
-    max-width: 25%;
-    margin: 50px auto;
-    color: #fff;
-    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70%;
+    height: 70%;
+    background: var(--leaderboardBackgroundImage)  no-repeat;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    transition: opacity 0.5s ease, transform 0.5s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .config-section h2 {
@@ -79,7 +86,7 @@
 }
 
 .select-config option:hover {
-    background-color: rgba(100, 100, 100, 0.1); /* Destaque da opção ao passar o mouse */
+    background-color: rgba(100, 100, 100, 0.1);
 }
 
 .select-config {
@@ -102,7 +109,7 @@
     padding: 12px 20px;
     font-size: 16px;
     background-color: var(--configBtnColor);
-    color: white;
+    color: #e4e4e4;
     border: none;
     border-radius: 50px;
     cursor: pointer;
@@ -111,105 +118,17 @@
     letter-spacing: 2px;
     text-transform: uppercase;
     margin-top: 15px;
+    transition: transform 0.5s ease-in-out;
 }
 
 .btn-config:hover {
+    color: white;
     background-color: var(--configBtnColorHighlight);
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
-    transform: translateY(-3px);
+    transform: scale(1.1);
 }
 
 .btn-config:active {
     transform: translateY(1px);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
-
-
-/* ------------------------------------------------------- */
-
-/*
-
-.select-menu {
-    width: 100%;
-}
-
-.select-menu .select-btn {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 40px;
-    background: #fff;
-    color: #333;
-    font-size: 16px;
-    padding: 16px;
-    margin-top: 26px;
-    border-radius: 8px;
-    cursor: pointer;
-    box-shadow: 0 0 5px rgba(0, 0, 0, .1);
-}
-
-.select-btn .icon-arrow {
-    font-size: 16px;
-    transition: 1s;
-}
-
-.select-btn.active .icon-arrow {
-    transform: rotate(180deg);
-}
-
-.select-menu .list {
-    position: absolute;
-    width: auto;
-    transform: translateY(30px);
-    margin-top: 30px;
-    z-index: -10;
-}
-
-.list .option {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 40px;
-    background: #fff;
-    padding: 0 16px;
-    cursor: pointer;
-    transform-origin: top;
-    opacity: 0;
-    transform: scale(0) translateY(-65px);
-    transition: opacity .5s ease-in-out, transform .5s ease-in-out, margin-bottom .5s ease-in-out;
-    transition-delay: calc(.1s * var(--i));
-}
-
-.select-btn.active~.list .option {
-    transition: opacity 1s ease-in-out, transform .5s ease-in-out, margin-bottom .2s ease-in-out;
-    transition-delay: calc(.1s * var(--i));
-    opacity: 1;
-    transform: scale(1) translateY(0);
-    margin-bottom: 0;
-}
-
-.list .option:hover {
-    background: #f2f2f2;
-}
-
-.list .option:nth-child(1) {
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-}
-
-.list .option:nth-child(5) {
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
-}
-
-.option .icon {
-    font-size: 16px;
-}
-
-.option .option-text {
-    font-size: 16px;
-    color: red
-}
-
-*/
