--- a/Nine-Mens-Morris/public/static/css/rules.css
+++ b/Nine-Mens-Morris/public/static/css/rules.css
@@ -1,7 +1,21 @@
 .rules {
-    padding: 40px;
-    color: #101f44;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70%;
+    height: 70%;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    margin-top: 50px;
+    margin-bottom: 20px;
     text-align: center;
+    transition: opacity 0.5s ease, transform 0.5s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .rules h3 {
@@ -18,7 +32,7 @@
 
 .main-slider-container {
     position: relative;
-    max-width: 800px;
+    width: 75%;
     margin: 0 auto;
     overflow: hidden;
     background-color: var(--mainSliderBackgroundColor);
@@ -126,9 +140,12 @@
     left: 0;
     width: 100%;
     opacity: 0;
-    transition: opacity 0.5s ease-in-out;
-    visibility: hidden;
-    vertical-align: middle;
+    transition: opacity 0.5s ease-in-out, display 0.5s ease-in-out;
+}
+
+.slide.active {
+    display: block;
+    opacity: 1;
 }
 
 .slide p {
@@ -139,19 +156,7 @@
     width: 18%;
     height: auto;
     display: block;
-    opacity: 0;
     margin: 20px auto;
-    transition: opacity 0.5s ease-in-out;
-}
-
-.slide.active {
-    display: block;
-    opacity: 1;
-    visibility: visible;
-}
-
-.slide.active img {
-    opacity: 1;
 }
 
 .slider-dots {
@@ -160,7 +165,7 @@
     margin-top: 15px;
 }
 
-.dot{
+.dot {
     height: 12px;
     width: 12px;
     border-radius: 50%;
@@ -170,14 +175,12 @@
     transition: background-color 0.3s ease;
     background-color: var(--subSlidersIdleDotColor);
     z-index: 5;
-}
-
-.dot.active{
-    background-color: var(--subSlidersSelectedDotColor);
-    border-color: var(--subSlidersSelectedBorderDotColor);
+    transition: background-color 0.5s ease-in-out;
 }
 
 .dot.active {
+    background-color: var(--subSlidersSelectedDotColor);
+    border-color: var(--subSlidersSelectedBorderDotColor);
     border-style: hidden;
     border-width: 1px;
 }
