Improved UI, game logic and some other fancy stuff

--- a/Nine-Mens-Morris/public/static/css/base.css
+++ b/Nine-Mens-Morris/public/static/css/base.css
@@ -38,7 +38,7 @@
     --squareColor: #101f44;
     --player1Color: #3B82F6;
     --player2Color: crimson;
-    
+    --activePlayerColor: #6082B6;
     --boardOffset: 25px;
 
     /* Configuration */
