--- a/Nine-Mens-Morris/public/static/css/boardGame.css
+++ b/Nine-Mens-Morris/public/static/css/boardGame.css
@@ -1,16 +1,3 @@
-:root {
-    --boardSide: 350px;
-    --pointRadius: 14px;
-    --pointColor: #e5e9f5;
-    --pointBorderColor: #8499ce;
-    --pointHighlightColor: green;
-    --lineThickness: 4px;
-    --lineColor: #8499ce;
-    --squareColor: #101f44;
-
-    --boardOffset: 25px;
-}
-
 .game-board {
     position: absolute;
     top: 50%;
@@ -72,7 +59,6 @@
 .player1-info, .player2-info {
     position: absolute;
     top: 35%;
-    border-radius: 10px;
     text-align: center;
     padding: 10px;
     color: var(--pointColor);
@@ -106,7 +92,6 @@
 .player1-current-phase, .player2-current-phase {
     position: absolute;
     top: 45%;
-    border-radius: 10px;
     text-align: center;
     padding: 10px;
     color: var(--pointColor);
@@ -125,6 +110,53 @@
 
 .player2-current-phase {
     left: 68.5%;
+}
+
+.player1-pieces-container, .player2-pieces-container {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    top: 55%;
+    height: fit-content;
+    width: 15%;
+    text-align: center;
+    padding: 10px;
+    color: var(--pointColor);
+    /* background-color: var(--pointBorderColor); */
+    background-color: transparent;
+    border-radius: 10px;
+    border-color: var(--lineColor);
+    border-width: calc(var(--lineThickness) / 1.5);
+    border-style: ridge;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+    z-index: 3;
+}
+
+.player1-pieces-container {
+    right: 65%;
+}
+
+.player1-pieces-container div {
+    width: calc(var(--pointRadius) * 2);
+    height: calc(var(--pointRadius) * 2);
+    background-color: var(--player1Color);
+    border: 3px solid var(--pointColor);
+    border-radius: 100%;
+    z-index: 11;
+}
+
+.player2-pieces-container {
+    left: 65%;
+}
+
+.player2-pieces-container div {
+    width: calc(var(--pointRadius) * 2);
+    height: calc(var(--pointRadius) * 2);
+    background-color: var(--player2Color);
+    border: 3px solid var(--pointColor);
+    border-radius: 100%;
+    z-index: 11;
 }
 
 .point {
