--- a/Nine-Mens-Morris/public/static/css/boardGame.css
+++ b/Nine-Mens-Morris/public/static/css/boardGame.css
@@ -1,4 +1,4 @@
-.game-board {
+.game-layout {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -18,24 +18,24 @@
     transition: opacity 0.5s ease, transform 0.5s ease;
 }
 
-.board-container {
-    position: relative;
-    width: var(--boardSide);
-    height: var(--boardSide);
-    margin: var(--boardOffset) auto;
+.game-board {
+    position: absolute;
     display: flex;
+    flex-direction: column;
+    left: 35%;
+    width: 30%;
+    height: 100%;
+    justify-content: center;
     align-items: center;
-    border-radius: 50%;
 }
 
 .game-winner {
-    align-items: center;
-    justify-content: center;
+    position: absolute;
+    top: 8%;
     width: max-content;
     text-align: center;
     font-size: 20px;
     padding: 10px;
-    margin: 0 auto;
     opacity: 0;
     border: var(--squareColor);
     border-style: ridge;
@@ -43,6 +43,15 @@
     border-radius: 8px;
     background-color: var(--pointBorderColor);
     transition: opacity 0.5s ease-in-out;
+    z-index: 1;
+}
+
+.board-container {
+    position: absolute;
+    width: var(--boardSide);
+    height: var(--boardSide);
+    margin: var(--boardOffset) auto;
+    border-radius: 50%;
 }
 
 .game-winner.active {
@@ -56,10 +65,30 @@
     box-shadow: 0 0 20px var(--pointColor);
 }
 
+.player1, .player2 {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    top: 0;
+    width: 35%;
+    height: 100%;
+    align-items: center;
+}
+
+.player1 {
+    left: 0;
+}
+
+.player2 {
+    right: 0;
+}
+
 .player1-info, .player2-info {
     position: absolute;
+    display: flex;
     top: 35%;
     text-align: center;
+    justify-content: center;
     padding: 10px;
     color: var(--pointColor);
     background-color: #A7C7E7;
@@ -69,14 +98,6 @@
     border-style: ridge;
     transition: background-color 0.3s ease, border-color 0.3s ease;
     z-index: 1;
-}
-
-.player1-info {
-    right: 70%;
-}
-
-.player2-info {
-    left: 70%;
 }
 
 .player1-info:hover, .player2-info:hover {
@@ -104,22 +125,15 @@
     z-index: 1;
 }
 
-.player1-current-phase {
-    right: 68.5%;
-}
-
-.player2-current-phase {
-    left: 68.5%;
-}
-
 .player1-pieces-container, .player2-pieces-container {
     position: absolute;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    flex-flow: row wrap;
     top: 55%;
     height: fit-content;
-    width: 15%;
+    max-width: 45%;
     text-align: center;
     padding: 10px;
     color: var(--pointColor);
@@ -133,30 +147,20 @@
     z-index: 3;
 }
 
-.player1-pieces-container {
-    right: 65%;
+.player1-pieces-container div, .player2-pieces-container div {
+    width: calc(var(--pointRadius) * 2);
+    height: calc(var(--pointRadius) * 2);
+    border: 3px solid var(--pointColor);
+    border-radius: 100%;
+    margin: 10px;
 }
 
 .player1-pieces-container div {
-    width: calc(var(--pointRadius) * 2);
-    height: calc(var(--pointRadius) * 2);
     background-color: var(--player1Color);
-    border: 3px solid var(--pointColor);
-    border-radius: 100%;
-    z-index: 11;
-}
-
-.player2-pieces-container {
-    left: 65%;
 }
 
 .player2-pieces-container div {
-    width: calc(var(--pointRadius) * 2);
-    height: calc(var(--pointRadius) * 2);
     background-color: var(--player2Color);
-    border: 3px solid var(--pointColor);
-    border-radius: 100%;
-    z-index: 11;
 }
 
 .point {
