--- a/Nine-Mens-Morris/public/static/css/boardGame.css
+++ b/Nine-Mens-Morris/public/static/css/boardGame.css
@@ -1,228 +1,234 @@
 .game-layout {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 70%;
-    height: 70%;
-    background: var(--leaderboardBackgroundImage) no-repeat;
-    background-size: cover;
-    background-position: center;
-    border-radius: 10px;
-    margin-top: 50px;
-    margin-bottom: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    transition: opacity 0.5s ease, transform 0.5s ease;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+  height: 70%;
+  background: var(--leaderboardBackgroundImage) no-repeat;
+  background-size: cover;
+  background-position: center;
+  border-radius: 10px;
+  margin-top: 50px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: opacity 0.5s ease, transform 0.5s ease;
 }
 
 .game-board {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    left: 35%;
-    width: 30%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  left: 35%;
+  width: 30%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 .game-winner {
-    position: absolute;
-    top: 8%;
-    width: max-content;
-    text-align: center;
-    font-size: 20px;
-    padding: 10px;
-    opacity: 0;
-    border: var(--squareColor);
-    border-style: ridge;
-    border-width: calc(var(--lineThickness) / 1.5);
-    border-radius: 8px;
-    background-color: var(--pointBorderColor);
-    transition: opacity 0.5s ease-in-out;
-    z-index: 1;
+  position: absolute;
+  top: 8%;
+  width: max-content;
+  text-align: center;
+  font-size: 20px;
+  padding: 10px;
+  opacity: 0;
+  border: var(--squareColor);
+  border-style: ridge;
+  border-width: calc(var(--lineThickness) / 1.5);
+  border-radius: 8px;
+  background-color: var(--pointBorderColor);
+  transition: opacity 0.5s ease-in-out;
+  z-index: 1;
 }
 
 .board-container {
-    position: absolute;
-    width: var(--boardSide);
-    height: var(--boardSide);
-    margin: var(--boardOffset) auto;
-    border-radius: 50%;
+  position: absolute;
+  width: var(--boardSide);
+  height: var(--boardSide);
+  margin: var(--boardOffset) auto;
+  border-radius: 50%;
 }
 
 .game-winner.active {
-    opacity: 1;
+  opacity: 1;
 }
 
-.game-winner:hover{
-    color: #e4e4e4;
-    font-weight: bold;
-    cursor: pointer;
-    box-shadow: 0 0 20px var(--pointColor);
+.game-winner:hover {
+  color: #e4e4e4;
+  font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0 0 20px var(--pointColor);
 }
 
-.player1, .player2 {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    top: 0;
-    width: 35%;
-    height: 100%;
-    align-items: center;
+.player1,
+.player2 {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 0;
+  width: 35%;
+  height: 100%;
+  align-items: center;
 }
 
 .player1 {
-    left: 0;
+  left: 0;
 }
 
 .player2 {
-    right: 0;
+  right: 0;
 }
 
-.player1-info, .player2-info {
-    position: absolute;
-    display: flex;
-    top: 35%;
-    text-align: center;
-    justify-content: center;
-    padding: 10px;
-    color: var(--pointColor);
-    background-color: #A7C7E7;
-    border-radius: 10px;
-    border-color: var(--lineColor);
-    border-width: calc(var(--lineThickness) / 1.5);
-    border-style: ridge;
-    transition: background-color 0.3s ease, border-color 0.3s ease;
-    z-index: 1;
+.player1-info,
+.player2-info {
+  position: absolute;
+  display: flex;
+  top: 35%;
+  text-align: center;
+  justify-content: center;
+  padding: 10px;
+  color: var(--pointColor);
+  background-color: #a7c7e7;
+  border-radius: 10px;
+  border-color: var(--lineColor);
+  border-width: calc(var(--lineThickness) / 1.5);
+  border-style: ridge;
+  transition: background-color 0.3s ease, border-color 0.3s ease;
+  z-index: 1;
 }
 
-.player1-info:hover, .player2-info:hover {
-    cursor: pointer;
+.player1-info:hover,
+.player2-info:hover {
+  cursor: pointer;
 }
 
 .active-player {
-    color: var(--pointColor);
-    background-color: var(--activePlayerColor);
-    box-shadow: 0 0 40px var(--pointBorderColor);
+  color: var(--pointColor);
+  background-color: var(--activePlayerColor);
+  box-shadow: 0 0 40px var(--pointBorderColor);
 }
 
-.player1-current-phase, .player2-current-phase {
-    position: absolute;
-    top: 45%;
-    text-align: center;
-    padding: 10px;
-    color: var(--pointColor);
-    background-color: var(--pointBorderColor);
-    border-radius: 10px;
-    border-color: var(--lineColor);
-    border-width: calc(var(--lineThickness) / 1.5);
-    border-style: ridge;
-    transition: background-color 0.3s ease, border-color 0.3s ease;
-    z-index: 1;
+.player1-current-phase,
+.player2-current-phase {
+  position: absolute;
+  top: 45%;
+  text-align: center;
+  padding: 10px;
+  color: var(--pointColor);
+  background-color: var(--pointBorderColor);
+  border-radius: 10px;
+  border-color: var(--lineColor);
+  border-width: calc(var(--lineThickness) / 1.5);
+  border-style: ridge;
+  transition: background-color 0.3s ease, border-color 0.3s ease;
+  z-index: 1;
 }
 
-.player1-pieces-container, .player2-pieces-container {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-flow: row wrap;
-    top: 55%;
-    height: fit-content;
-    max-width: 45%;
-    text-align: center;
-    padding: 10px;
-    color: var(--pointColor);
-    /* background-color: var(--pointBorderColor); */
-    background-color: transparent;
-    border-radius: 10px;
-    border-color: var(--lineColor);
-    border-width: calc(var(--lineThickness) / 1.5);
-    border-style: ridge;
-    transition: background-color 0.3s ease, border-color 0.3s ease;
-    z-index: 3;
+.player1-pieces-container,
+.player2-pieces-container {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-flow: row wrap;
+  top: 55%;
+  height: fit-content;
+  max-width: 45%;
+  text-align: center;
+  padding: 10px;
+  color: var(--pointColor);
+  /* background-color: var(--pointBorderColor); */
+  background-color: transparent;
+  border-radius: 10px;
+  border-color: var(--lineColor);
+  border-width: calc(var(--lineThickness) / 1.5);
+  border-style: ridge;
+  transition: background-color 0.3s ease, border-color 0.3s ease;
+  z-index: 3;
 }
 
-.player1-pieces-container div, .player2-pieces-container div {
-    width: calc(var(--pointRadius) * 2);
-    height: calc(var(--pointRadius) * 2);
-    border: 3px solid var(--pointColor);
-    border-radius: 100%;
-    margin: 10px;
+.player1-pieces-container div,
+.player2-pieces-container div {
+  width: calc(var(--pointRadius) * 2);
+  height: calc(var(--pointRadius) * 2);
+  border: 3px solid var(--pointColor);
+  border-radius: 100%;
+  margin: 10px;
 }
 
 .player1-pieces-container div {
-    background-color: var(--player1Color);
+  background-color: var(--player1Color);
 }
 
 .player2-pieces-container div {
-    background-color: var(--player2Color);
+  background-color: var(--player2Color);
 }
 
 .point {
-    position: absolute;
-    width: calc(var(--pointRadius)*2);
-    height: calc(var(--pointRadius)*2);
-    border-radius: 50%;
-    color: var(--pointColor);
-    background-color: var(--pointColor);
-    border: 3px solid var(--pointBorderColor);
-    cursor: pointer;
-    transition: background-color 0.3s ease, border-color 0.3s ease;
-    z-index: 5;
+  position: absolute;
+  width: calc(var(--pointRadius) * 2);
+  height: calc(var(--pointRadius) * 2);
+  border-radius: 50%;
+  color: var(--pointColor);
+  background-color: var(--pointColor);
+  border: 3px solid var(--pointBorderColor);
+  cursor: pointer;
+  transition: background-color 0.3s ease, border-color 0.3s ease;
+  z-index: 5;
 }
 
 .point:hover {
-    background-color: var(--pointHighlightColor);
+  background-color: var(--pointHighlightColor);
 }
 
 .point.selected-player1 {
-    background-color: var(--player1Color);
-    border: 3px solid var(--pointColor);
+  background-color: var(--player1Color);
+  border: 3px solid var(--pointColor);
 }
 
 .point.selected-player2 {
-    background-color: var(--player2Color);
-    border: 3px solid var(--pointColor);
+  background-color: var(--player2Color);
+  border: 3px solid var(--pointColor);
 }
 
 .line {
-    position: absolute;
-    background-color: var(--squareColor);
+  position: absolute;
+  background-color: var(--squareColor);
 }
 
 .vertical-line {
-    width: var(--lineThickness);
-    height: 100px;
+  width: var(--lineThickness);
+  height: 100px;
 }
 
 .horizontal-line {
-    height: var(--lineThickness);
-    width: 100px;
+  height: var(--lineThickness);
+  width: 100px;
 }
 
 .square {
-    position: absolute;
-    border: var(--lineThickness) solid var(--lineColor);
-    background-color: var(--squareColor);
-    align-self: center;
+  position: absolute;
+  border: var(--lineThickness) solid var(--lineColor);
+  background-color: var(--squareColor);
+  align-self: center;
 }
 
 .small-square {
-    width: 150px;
-    height: 150px;
+  width: 150px;
+  height: 150px;
 }
 
 .medium-square {
-    width: 300px;
-    height: 300px;
+  width: 300px;
+  height: 300px;
 }
 
 .large-square {
-    width: 450px;
-    height: 450px;
+  width: 450px;
+  height: 450px;
 }
