--- a/Nine-Mens-Morris/public/static/css/style.css
+++ b/Nine-Mens-Morris/public/static/css/style.css
@@ -1,119 +1,119 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: Arial, sans-serif;
-    background-image: var(--backgroundImage);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
+  font-family: Arial, sans-serif;
+  background-image: var(--backgroundImage);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 header {
-    background-color: transparent;
-    padding: 50px 0;
-    color: #fff;
+  background-color: transparent;
+  padding: 50px 0;
+  color: #fff;
 }
 
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 40px;
 }
 
 .logo-container {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .logo {
-    height: 70px;
-    margin-right: 30px;
+  height: 70px;
+  margin-right: 30px;
 }
 
 .logo-text {
-    font-size: 32px;
-    font-weight: bold;
+  font-size: 32px;
+  font-weight: bold;
 }
 
 ul {
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-    width: 50%;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
 }
 
 ul li {
-    margin-left: var(--spaceBetweenButtons);
+  margin-left: var(--spaceBetweenButtons);
 }
 
 ul li:last-child {
-    margin-right: var(--spaceEnd);
+  margin-right: var(--spaceEnd);
 }
 
 .nav-btn {
-    position: relative;
-    color: #fff;
-    background-color: transparent;
-    font-size: 24px;
-    text-decoration: none;
-    border: none;
-    cursor: pointer;
-    z-index: 1;
+  position: relative;
+  color: #fff;
+  background-color: transparent;
+  font-size: 24px;
+  text-decoration: none;
+  border: none;
+  cursor: pointer;
+  z-index: 1;
 }
 
 .nav-btn::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -6px;
-    width: 100%;
-    height: 3px;
-    background: #fff;
-    border-radius: 5px;
-    transform-origin: right;
-    transform: scaleX(0);
-    transition: transform .3s;
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -6px;
+  width: 100%;
+  height: 3px;
+  background: #fff;
+  border-radius: 5px;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform 0.3s;
 }
 
 .nav-btn:hover::after {
-    transform-origin: left;
-    transform: scaleX(1);
+  transform-origin: left;
+  transform: scaleX(1);
 }
 
 main {
-    padding: 0px;
+  padding: 0px;
 }
 
 .content-box {
-    width: 100%;
-    margin: -3% auto;
+  width: 100%;
+  margin: -3% auto;
 }
 
 .content {
-    display: none;
-    opacity: 0;
-    color: #e4e4e4e4;
-    transition: opacity 0.5s ease;
+  display: none;
+  opacity: 0;
+  color: #e4e4e4e4;
+  transition: opacity 0.5s ease;
 }
 
 .content.active {
-    display: block;
-    opacity: 1;
-    padding: 5px;
-    border-radius: 10px;
-    box-shadow: 0 0px 0px rgba(0, 0, 0, 0.7);
+  display: block;
+  opacity: 1;
+  padding: 5px;
+  border-radius: 10px;
+  box-shadow: 0 0px 0px rgba(0, 0, 0, 0.7);
 }
 
 .content h2 {
-    font-size: 28px;
-    margin-bottom: 18px;
+  font-size: 28px;
+  margin-bottom: 18px;
 }
 
 .content p {
-    font-size: 18px;
+  font-size: 18px;
 }
